--- a/IntergerRepresentation/IntergerRepresentation.vcxproj
+++ b/IntergerRepresentation/IntergerRepresentation.vcxproj
@@ -116,9 +116,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="operand.cpp" />
     <ClCompile Include="QInt.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="myLib.h" />
     <ClInclude Include="QInt.h" />
   </ItemGroup>
   <ItemGroup>
