--- a/IntergerRepresentation/IntergerRepresentation.vcxproj
+++ b/IntergerRepresentation/IntergerRepresentation.vcxproj
@@ -120,7 +120,7 @@
     <ClCompile Include="QInt.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="myLib.h" />
+    <ClInclude Include="UtilityFunc.h" />
     <ClInclude Include="QInt.h" />
   </ItemGroup>
   <ItemGroup>
