--- a/IntergerRepresentation/IntergerRepresentation.vcxproj
+++ b/IntergerRepresentation/IntergerRepresentation.vcxproj
@@ -117,10 +117,12 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="operand.cpp" />
+    <ClCompile Include="QFloat.cpp" />
     <ClCompile Include="QInt.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="myLib.h" />
+    <ClInclude Include="QFloat.h" />
     <ClInclude Include="QInt.h" />
   </ItemGroup>
   <ItemGroup>
