--- a/IntergerRepresentation/IntergerRepresentation.vcxproj
+++ b/IntergerRepresentation/IntergerRepresentation.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{524A5982-963F-4BF6-B1EA-D0A46F1007DE}</ProjectGuid>
+    <ProjectGuid>{9BF95270-30D3-4077-B34A-A949E0B30CE4}</ProjectGuid>
     <RootNamespace>IntergerRepresentation</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -115,18 +115,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="UtilityFunc.cpp" />
-    <ClCompile Include="QFloat.cpp" />
-    <ClCompile Include="QInt.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="QFloat.h" />
-    <ClInclude Include="UtilityFunc.h" />
+    <ClInclude Include="Qfloat.h" />
     <ClInclude Include="QInt.h" />
+    <ClInclude Include="UtilityFunc.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="inputFile.txt" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Qfloat.cpp" />
+    <ClCompile Include="QInt.cpp" />
+    <ClCompile Include="UtilityFunc.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
