--- a/IntergerRepresentation/IntergerRepresentation.vcxproj
+++ b/IntergerRepresentation/IntergerRepresentation.vcxproj
@@ -115,11 +115,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Qfloat.h" />
     <ClInclude Include="QInt.h" />
     <ClInclude Include="UtilityFunc.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Qfloat.cpp" />
     <ClCompile Include="QInt.cpp" />
     <ClCompile Include="UtilityFunc.cpp" />
   </ItemGroup>
