--- a/IntergerRepresentation/IntergerRepresentation.vcxproj.filters
+++ b/IntergerRepresentation/IntergerRepresentation.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="UtilityFunc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Qfloat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -30,6 +33,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="UtilityFunc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Qfloat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
